--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,12 @@ jobs:
           MYSQL_ROOT_PASSWORD: root
         ports:
         - 3306:3306
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+        ports:
+        - 5432:5432
 
     steps:
     - name: Install Go
